@@ -233,10 +233,10 @@ namespace CBinding
 		
 		public string DescriptionPango {
 			get { return description_pango; }
-		}		
-		public virtual int CompareTo (ICompletionData x)
-		{
-			return String.Compare (Text[0], x.Text[0], true);
+		}
+		
+		public bool Sink {
+			get { return false; }
 		}
 	}
 
