@@ -1,3 +1,7 @@
+2008-10-07  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* Gui/DataProvider.cs: Track API.
+
 2008-10-01  Michael Hutchinson <mhutchinson@novell.com> 
 
 	* Project/CProject.cs: Track API.
